--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -13,8 +13,8 @@
   <ion-list>
     <ion-item-sliding *ngFor = "let item of loadItems(); let i = index">
       <ion-item>
-        <h2>{{item.name}}</h2>
-        <p>{{item.quantity}}</p>
+        <h2 class = "item-name">{{item.name}}</h2>
+        <p class = "item-qty">Quantity: {{item.quantity}}</p>
       </ion-item>
       <ion-item-options>
         <button (click) = "editItem(item, i)" ion-button color="primary" icon-start>
@@ -22,7 +22,7 @@
           Edit
         </button>
         <button (click) = "shareItem(item, i)" ion-button color="light" icon-start>
-          <ion-icon name="create"></ion-icon>
+          <ion-icon name="share"></ion-icon>
           Share
         </button>
         <button (click) = "removeItem(item, i)" ion-button color="secondary" icon-start>
